--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>New York Times Search</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 </head>
+
 <body>
 
     <div class = "header">
-        <h1>New York Times Search</h1>
+        <h1><i class="fa fa-newspaper-o" aria-hidden="true"> </i>New York Times Search</h1>
     </div>
+
     <div id = "searchpara">
+        <h2>
+            <i class="fa fa-list-alt" aria-hidden="true"></i> Search Parameters
+        </h2>
         <form>
             Search Terms:<br>
                 <input type="text" name="searchterms">
@@ -26,9 +32,12 @@
              End Year (optional):<br>
                 <input type="text" name="endyear">
                 <br><br>
+            <button class = "Search"><i class="fa fa-search" aria-hidden="true"></i> Search</button> <button class = "Clear"><i class="fa fa-trash" aria-hidden="true"></i> Clear Results</button>
         </form>
-        <button class = "Search">Search</button> <button class = "Clear">Clear Results</button>
+        
     </div>
-    <div id = "toparticle"></div>
+    <div id = "toparticle">
+        <h2>Top Articles</h2>
+    </div>
 </body>
 </html>
