Javasript changes, support for paging

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
              End Year (optional):<br>
                 <input type="text"class="text"  name="endyear">
                 <br><br>
-            <button id="search"><i class="fa fa-search" aria-hidden="true"></i> Search</button> <button class = "Clear"><i class="fa fa-trash" aria-hidden="true"></i> Clear Results</button>
+            <button id="search"><i class="fa fa-search" aria-hidden="true"></i> Search</button> <button class = "Clear"><i class="fa fa-trash" aria-hidden="true"></i> Clear Results</button> 
+            <button id="prev"><i class="fa fa-arrow-left" aria-hidden="true"></i> Prev Page</button> <button id="next"><i class="fa fa-arrow-right"></i> Next Page</button>
         </form>
       </div>  
     </div>
